--- a/report/src/report_progetto_finale_BigData.tex
+++ b/report/src/report_progetto_finale_BigData.tex
@@ -199,15 +199,15 @@ Come rappresentato nella figura precedente, il sistema è composto principalment
 Grazie a docker, i cinque blocchi sono stati fatti partire su 5 container separati. \\
 Per il primo blocco, relativo alla simulazione dei sensori IoT, è stato creato un Dockerfile nel quale è stato definito il container e successivamente è stata creata l'immagine contenente il container. Per gli altri blocchi sono state utilizzate delle immagini di container già esistenti nel \href{https://hub.docker.com} {\textbf{Docker Hub Container Image Library}}.\\
 Le variabili d'ambiente necessarie per il corretto funzionamento dei container sono state definite all'interno del file \texttt{docker-compose.yml}.\\
-Una volta scaricate le immagini dei container e definite le variabili d'ambiente, il tutto è stato fatto partire con lo script \texttt{start-compose.sh} presente all'interno della cartella \textit{script}. Nella stessa cartella è presente anche lo script \texttt{stop-compose.sh} per interrompere l'esecuzione dei container.
+Una volta scaricate le immagini dei container e definite le variabili d'ambiente, il tutto è stato fatto partire con lo script \texttt{start-compose.sh} presente all'interno della cartella \textit{scripts}. Nella stessa cartella è presente anche lo script \texttt{stop-compose.sh} per interrompere l'esecuzione dei container.
 
 \subsection{Dati da sensori IoT}
 Il primo container realizzato è stato quello per i sensori IoT. Come riportato in precedenza, non avendo accesso diretto ai sensori l'invio dei dati è stato simulato mediante un container docker. I file e gli script necessari per il funzionamento del seguente container sono presenti all'interno della cartella \textit{iot-data-producer}.\\
 Il container è stato definito all'interno del file \textbf{Dockerfile}. Per leggere i dati e trasmetterli al messaging layer (realizzato usando Kafka), è stato utilizzato uno script Python, quindi nel Dockerfile è stata definita l'ultima versione di Python da installare nel container e il package \textit{kafka-python} che consiste in un client Kafka per il linguaggio Python, il quale permette allo script di interagire con Kafka.
-Una volta definito il file Dockerfile, l'immagine del container è stata generata mediante lo script \textit{build-iot-container} presente all'interno della cartella script.\\
+Una volta definito il file Dockerfile, l'immagine del container è stata generata mediante lo script \textit{build-iot-container} presente all'interno della cartella \textit{scripts}.\\
 Lo script Python realizzato per leggere ed inviare i dati a Kafka, prende in input il nome del file in formato JSON da leggere e inizializza il producer per inviare i dati al container nel quale è in esecuzione Kafka (raggiungibile all'endpoint \textit{kafka:9093}). Successivamente legge il file JSON, inizializza le chiavi presenti nel file in una lista e scorre i valori delle chiavi al contrario (questo perchè l'ultima riga è il dato memorizzato più recente). Come visto in precedenza il file ha per ogni chiave un valore e un timestamp. La chiave rappresenta i diversi dati raccolti da un unico sensore, quindi nello stesso istante di tempo il sensore invia più dati. Lo script effettua anche dei controlli sul nome delle chiavi e sul nome del file perchè ci possono essere sensori chiamati uguali, che inviano dati con le stesse chiavi ma che possono essere installati su punti diversi. Quindi, per ogni riga di ogni chiave del file vengono generate due liste nelle quali, in una vengono inserite le chiavi e nell'altra, seguendo lo stesso ordine, vengono inseriti i valori. Il timestamp essendo lo stesso viene inserito in una variabile. Dalle due liste e dal valore del timestamp viene generato un messaggio convertito in una stringa JSON. \\
 Il producer definito in precedenza si occupa di inviare il messaggio contenente la stringa JSON e il nome del file letto a Kafka. I dati vengono inviati a Kafka ad intervalli di 5 secondi. Il nome del file letto viene utilizzato da Kafka per creare topic differenti sui quali andare a memorizzare i messaggi provenenti dal seguente container. In questo caso sono stati definiti 10 topic avendo a disposizione 10 file differenti.\\
-L'invio in parallelo dei dati da tutti i sensori è stato realizzato mediante lo script \textit{start-producer.sh} presente all'interno della cartella script, che richiama per ogni file JSON lo script Python descritto e al quale viene passato il nome di ogni file. 
+L'invio in parallelo dei dati da tutti i sensori è stato realizzato mediante lo script \textit{start-producer.sh} presente all'interno della cartella \textit{scripts}, che richiama per ogni file JSON lo script Python descritto e al quale viene passato il nome di ogni file. 
 
 \subsubsection{Pseudocodice}
 % IoT data producer
@@ -262,7 +262,7 @@ La classe \texttt{InfluxDBWriter} si occupa di inizializzare la connessione con 
 Inoltre, è stato inserito un controllo sul valore medio dell'umidità. Questo valore, insieme ai valori relativi alla bagnatura fogliare, devono essere tenuti sotto controllo perchè se superiori ad una certa soglia potrebbero provocare l'attacco di bolla sulle piante di pesco. Per le piante di pesco l'attacco di bolla è una delle malattie più diffuse. Nel seguente caso è stato inserito un valore di test per l'umidità perchè al momento non ci sono abbastanza dati per stabilire con certezza le soglie dei valori.
 Come si può osservare in seguito dalla figura di output, se il valore dell'umidità è superiore la soglia viene stampato un messaggio di avviso in console. \\
 Infine, i dati processati vengono salvati sullo storage layer.\\
-Per poter installare il package \textit{influxdb\_client} nel container Spark e lanciare il seguente script Python è stato utilizzato lo script \textit{start-spark.sh} presente all'interno della cartella script.
+Per poter installare il package \textit{influxdb\_client} nel container Spark e lanciare il seguente script Python è stato utilizzato lo script \textit{start-spark.sh} presente all'interno della cartella \textit{scripts}.
 
 \subsubsection{Pseudocodice}
 % Spark-app
